correct cecklist y-pos

--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ a.skip-main:focus, a.skip-main:active { color: #000; background-color: #FFF; lef
 
 .mnc-icon-size-2 .mnc-icon { height: 26px; width: 26px; }
 
-.mnc-checklist li { background-repeat: no-repeat; background-image: url("/wp-content/uploads/svg/check-circle-green.svg"); background-size: 1rem; background-position: 0 12px; padding: 3px 0 3px 40px; list-style: none; margin: 0; }
+.mnc-checklist li { background-repeat: no-repeat; background-image: url("/wp-content/uploads/svg/check-circle-green.svg"); background-size: 1rem; background-position: 0 8px; padding: 3px 0 3px 40px; list-style: none; margin: 0; }
 @media (max-width: 767px) { .mnc-checklist li { background-size: 0.8em; background-position: 0 10px; padding: 3px 0 3px 20px; } }
 
 .mnc-row { display: flex; flex-direction: row; flex-wrap: wrap; width: 100%; }
@@ -29,6 +29,13 @@ a.skip-main:focus, a.skip-main:active { color: #000; background-color: #FFF; lef
 
 .mnc-form2col .wpcf7 .wpcf7-form-control-wrap { width: 96%; }
 
-.mnc-upper, #primary-menu > li > a > .menu-text { text-transform: uppercase !important; letter-spacing: 0.1em; }
+.mnc-upper, #primary-menu > li > a > .menu-text, .fl-builder-content .fl-button-wrap a.fl-button { text-transform: uppercase !important; letter-spacing: 0.1em; }
+
+.fl-builder-content .fl-button-wrap a.fl-button { background-color: #87a133; color: white; }
+@media (max-width: 767px) { .fl-builder-content .fl-button-wrap a.fl-button { text-align: center; } }
+
+.fl-builder-content a.fl-button, .fl-builder-content a.fl-button:visited { background-color: #87a133; color: white; }
+.fl-builder-content a.fl-button:hover, .fl-builder-content a.fl-button:visited:hover { background-color: #0e2c40; }
+.fl-builder-content a.fl-button span, .fl-builder-content a.fl-button:visited span { color: white; }
 
 .mnc-nofocus a:focus { border: none; }
