--- a/sass/_mi_variables.scss
+++ b/sass/_mi_variables.scss
@@ -2,6 +2,10 @@
 
 $color_mnc_gruen: #87a133;
 $color_mnc_blau: #0e2c40;
+$color_mnc_hellblau:#D1E7E5;
+$color_mnc_infoblau: #427adc;
+$color_mnc_bg_orange:#FEFBF7;
+$color_mnc_bg_blassblau:#F6FAFA;
 
 $icon_default_color: $color_mnc_gruen;
 $icon_default_height: 1rem;
