--- a/sass/style.scss
+++ b/sass/style.scss
@@ -21,3 +21,10 @@ Template: astra
     border:none;
   }
 }
+
+.wpcf7-form .screen-reader-response {
+  padding:10px;
+  border-left: 5px solid #f6dca7;
+  color: #c09853;
+  background-color: #fcf8e3;
+}
