--- a/sass/_mnc-layout.scss
+++ b/sass/_mnc-layout.scss
@@ -1,3 +1,31 @@
+a.skip-main {
+  left:-999px;
+  position:absolute;
+  top:auto;
+  width:1px;
+  height:1px;
+  overflow:hidden;
+  z-index:-999;
+}
+
+a.skip-main:focus, a.skip-main:active {
+  color: #000;
+  background-color:#FFF;
+  left: auto;
+  top: auto;
+  width: 30%;
+  height: auto;
+  overflow:auto;
+  margin: 10px 35%;
+  padding:5px;
+  border-radius: 15px;
+  border:3px solid #c13523;
+  text-align:center;
+  font-size:1.2em;
+  z-index:999;
+}
+
+
 .mnc-row {
   display: flex;
   flex-direction: row;
@@ -8,7 +36,6 @@
 .mnc-col {
   display: flex;
   flex-direction: column;
-  flex-basis: 100%;
   flex: 1;
 }
 
