--- a/sass/style.scss
+++ b/sass/style.scss
@@ -15,16 +15,6 @@ Template: astra
 @import "lists";
 @import "icons";
 @import "mnc-layout";
+@import "customizer_css";
+@import "newsletter_form";
 
-.mnc-nofocus {
-  a:focus {
-    border:none;
-  }
-}
-
-.wpcf7-form .screen-reader-response {
-  padding:10px;
-  border-left: 5px solid #f6dca7;
-  color: #c09853;
-  background-color: #fcf8e3;
-}
