--- a/sass/style.scss
+++ b/sass/style.scss
@@ -9,6 +9,15 @@ License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Text Domain: mainetcare-theme
 Template: astra
 */
+:root {
+  --color-mnc-gruen: #87a133;
+  --color-mnc-blau: #0e2c40;
+  --color-mnc-hellblau: #D1E7E5;
+  --color-mnc-infoblau: #427adc;
+  --color-mnc-bg_orange: #FEFBF7;
+  --color-mnc-bg_blassblau: #F6FAFA;
+}
+
 @import "mi_variables";
 @import "mi_mixins";
 @import "accessibility";
