--- a/sass/style.scss
+++ b/sass/style.scss
@@ -26,4 +26,8 @@ Template: astra
 @import "mnc-layout";
 @import "customizer_css";
 @import "newsletter_form";
+@import "hut";
+@import "buttons";
+@import "custom_post";
+@import "top_stories";
 
