--- a/sass/style.scss
+++ b/sass/style.scss
@@ -11,6 +11,7 @@ Template: astra
 */
 :root {
   --color-mnc-gruen: #87a133;
+  --color-mnc-text: #3a3a3a;
   --color-mnc-blau: #0e2c40;
   --color-mnc-hellblau: #D1E7E5;
   --color-mnc-infoblau: #427adc;
