--- a/sass/_custom_post.scss
+++ b/sass/_custom_post.scss
@@ -15,6 +15,16 @@
   }
 }
 
+.mnc-terms {
+  a {
+    color:var(--color-mnc-text);
+    &:hover {
+      color:var(--color-mnc-gruen);
+      text-decoration: underline;
+    }
+  }
+}
+
 
 .mnc-custom-post {
 
@@ -42,7 +52,6 @@
       color: var(--color-mnc-text);
 
       &:hover {
-        color: var(--color-mnc-orange);
         text-decoration: underline !important;
       }
     }
@@ -55,89 +64,13 @@
   }
 
   .more {
-    font-weight: 600;
-    display: inline-block;
-    margin-left: 0.75rem;
+    &:hover {
+      text-decoration: underline;
+    }
   }
 
   .mnc-excerpt {
     line-height: 1.5rem;
   }
 
-
 }
-
-.mnc-terms {
-  display: flex;
-  gap: 0.5rem;
-
-  a {
-    @include badge;
-  }
-}
-
-
-// Grid Display for Rezepte
-
-.mnc-list-grid .fl-post-feed {
-
-  --item-height:250px;
-  --img-height:190px;
-  --title-height:60px;
-
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(var(--item-height), 1fr));
-  @include mobile {
-    grid-template-columns: repeat(auto-fill, 1fr);
-  }
-  grid-gap: 2rem;
-  object-fit: cover;
-
-  .fl-post-feed-post {
-    display: flex;
-
-    & > a {
-      flex: 1;
-      display: flex;
-      flex-direction: column;
-      text-decoration: none !important;
-    }
-  }
-
-  .mnc-item-grid {
-    display:grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: var(--img-height) var(--title-height);
-    figure {
-      border-radius: 1rem;
-      background-color: white;
-      overflow: hidden;
-    }
-    img {
-      background-color: grey;
-      height:100%;
-      transition: all 300ms ease-in;
-      object-fit: cover;
-    }
-    h3 {
-      text-decoration: none !important;
-      color: var(--color-mnc-text);
-      line-height: 1.2rem;
-      margin: 0 auto;
-      display: inline-block;
-      padding: 0.5rem;
-      font-size: 1.1rem;
-      text-align: center;
-    }
-    &:hover {
-      h3 {
-        text-decoration: underline !important;
-      }
-      img {
-        transform: scale(1.15);
-      }
-    }
-  }
-
-}
-
